--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "chart.js": "^4.4.3",
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "express-validator": "^7.2.0",
     "mongoose": "^8.4.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
